fix: redirect npm tarball downloads
